samples/_failures_safe/1761273092_6d6b6d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54da0d3c.c: In function ‘main’:
./samples/SAFE/__tmp_54da0d3c.c:170:26: error: ‘create_token’ undeclared (first use in this function)
  170 |     TokenArray* tokens = create_token
      |                          ^~~~~~~~~~~~
./samples/SAFE/__tmp_54da0d3c.c:170:26: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_54da0d3c.c:170:5: error: expected ‘,’ or ‘;’ at end of input
  170 |     TokenArray* tokens = create_token
      |     ^~~~~~~~~~
./samples/SAFE/__tmp_54da0d3c.c:170:5: error: expected declaration or statement at end of input
